updates: fixed login blur and no overflow

--- a/static/style.css
+++ b/static/style.css
@@ -334,12 +334,18 @@ body {/*EDITED*/
 }
 
 
-
+/* BLUR LOGIN CUSTOMIZED */ /*edited*/
 #loginForm {
-  display: none; /* Hide the login form by default */
-  backdrop-filter: blur(5px); /* Apply blur effect to the background */
-  background-color: rgba(255, 255, 255, 0.5); /* Adjust background color with transparency */
-  z-index: 999; /* Ensure the login form is above other content */
+  display: none;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 999;
+}
+
+@supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+  #loginForm {
+    -webkit-backdrop-filter: blur(10px); /* Safari */
+    backdrop-filter: blur(10px); /* Standard */
+  }
 }
 
 
